white space issue

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -16,10 +16,7 @@ $bp-largest: 106em;  // 1700px
 *::after {
     margin: 0;
     padding: 0;
-    //box-sizing: inherit;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
+    box-sizing: inherit;
 }
 
 
@@ -43,8 +40,6 @@ body {
     //color: $color-grey-dark-2;
     font-weight: 300;
     line-height: 1.6;
-    width: 100%;
-    overflow-x: hidden;
 
 }
 
